RESOLVED FIXED157011
[JSC] Constant folding of UInt32ToNumber is incorrect
https://bugs.webkit.org/show_bug.cgi?id=157011
Summary [JSC] Constant folding of UInt32ToNumber is incorrect
Benjamin Poulain
Reported 2016-04-25 18:36:06 PDT
[JSC] Constant folding of UInt32ToNumber is incorrect
Attachments
Patch (5.24 KB, patch)
2016-04-25 18:50 PDT, Benjamin Poulain
no flags
Patch (5.22 KB, patch)
2016-04-25 19:03 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-04-25 18:50:11 PDT
Benjamin Poulain
Comment 2 2016-04-25 19:03:17 PDT
Geoffrey Garen
Comment 3 2016-04-25 19:46:16 PDT
Comment on attachment 277303 [details] Patch r=me
WebKit Commit Bot
Comment 4 2016-04-25 21:07:56 PDT
Comment on attachment 277303 [details] Patch Clearing flags on attachment: 277303 Committed r200071: <http://trac.webkit.org/changeset/200071>
WebKit Commit Bot
Comment 5 2016-04-25 21:08:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.